# train-neural-networks-with-gen-inequalities

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
libs/: CMakeLists.txt  patch_blaze_01.txt  patch_blaze_02.txt
lipnet/: CMakeLists.txt
lipnet/include/addon/: image.h
lipnet/include/lipnet/: optimizer.hpp  problem.hpp  statistics.hpp  tensor.hpp  traits.hpp  tuple.hpp  variable.hpp
lipnet/include/lipnet/lipschitz/: barrier.hpp  barrier_wot.hpp  decompos.hpp  feasibility.hpp  parameter.hpp  structure.hpp  topology.hpp  trivial.hpp
lipnet/include/lipnet/loader/: container.hpp  loader.hpp
lipnet/include/lipnet/network/: activation.hpp  backpropagation.hpp  layer.hpp  loss.hpp  network.hpp  topology.hpp
lipnet/include/lipnet/optimizer/: adam_barrier.hpp  adam_momentum.hpp  adam_projected.hpp  admm_optimizer.hpp  fast_gradient_descent.hpp  gradient_descent_projected.hpp
lipnet/include/lipnet/problem/: nn_problem_batch.hpp  nn_problem_batch_admm.hpp  nn_problem_batch_l2.hpp  nn_problem_liptrain_admm.hpp  nn_problem_liptrain_barrier.hpp  nn_problem_liptrain_barrier_wot.hpp  nn_problem_liptrain_projection.hpp
lipnet/src/: lipnet_admm_training.cpp  lipnet_training.cpp  lipnet_training_mnist.cpp  plotting_objectivsurface.cpp  plotting_statistics.cpp
